vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__architecture_misplaced_use.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
architecture a of e is
  begin
    use work.all;
  end architecture;

== tree ==
ArchitectureBody
  ArchitecturePreamble
    Keyword(Architecture)
    Identifier 'a'
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'e'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)

== diagnostics ==
2:8 Expected(Node([ArchitectureStatementPart]))
2:8 Expected(Node([ArchitectureEpilogue]))
