vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__concurrent_statement__tests__component_no_keyword_generic_aspect_map.snap
---
source: vhdl_syntax/src/parser/productions/concurrent_statement.rs
expression: "stmt_to_test_text(\"\\\ninst: lib.foo.bar\n  generic map (\n   const => 1\n  );\",)"
---
ComponentInstantiationStatement
  Label
    Identifier 'inst'
    Colon
  ComponentInstantiatedUnit
    Name
      Identifier 'lib'
      SelectedName
        Dot
        Identifier 'foo'
      SelectedName
        Dot
        Identifier 'bar'
  ComponentInstantiationItems
    GenericMapAspect
      Keyword(Generic)
      Keyword(Map)
      ParenthesizedAssociationList
        LeftPar
        AssociationList
          AssociationElement
            FormalPart
              Name
                Identifier 'const'
            RightArrow
            ActualPart
              AbstractLiteral '1'
        RightPar
  SemiColon
